src/objects/vlocity_ins__ProfilingSegment__c.object
<CustomObject>
    <description>Profiling Segment ( similiar to Tag).</description>
    <fields>
        <fullName>vlocity_ins__ActiveFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Flag on Segment</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AutoCode__c</fullName>
        <displayFormat>SEGMENT-{0}</displayFormat>
        <label>Auto Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <description>Short Code for segments</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__Configurable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to display if this attribute should be configured or not</description>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Filterable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this attribute should be displayed in Filter section</description>
        <label>Filterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProfSegCategory__c</fullName>
        <description>Parent segment category</description>
        <label>Profiling Segment Category</label>
        <referenceTo>vlocity_ins__ProfilingSegmentCategory__c</referenceTo>
        <relationshipName>ProfilingSegments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SegmentCategoryName__c</fullName>
        <formula>vlocity_ins__ProfSegCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UniqueNameField__c</fullName>
        <description>unique segment name field ,a concat of parent categoryCode &amp; Name</description>
        <label>UniqueNameField</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Deprecated Profiling Segment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deprecated Profiling Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>